@@ -11,6 +11,9 @@ Added org.lazywizard.lazylib.EllipseUtils:
    float ellipseWidth, float ellipseHeight, float ellipseAngleOffset)
 Added org.lazywizard.lazylib.campaign.orbits.EllipticalOrbit:
  - Implementation of OrbitAPI that travels along an elliptical path
+Added org.lazywizard.lazylib.opengl.ColorUtils:
+ - glColor(Color color)
+ - glColor(Color color, float alphaMult, boolean overrideOriginalAlpha)
 Changes to AIUtils:
  - Added getBestInterceptPoint(Vector2f point, float speed,
    CombatEntityAPI target) - all credit goes to Dark.Revenant
@@ -31,9 +34,9 @@ Changes to MathUtils:
  - Optimized getPointsAlongCircumference() and large numbers of points
  - Added getMidpoint(Vector2f point1, Vector2f point2)
 Changes to StringUtils:
- - Fixed wrapString() appending a newline when the input didn't have one
+ - Fixed wrapString() appending a newline when the input string didn't have one
  - Also fixed a rare bug with wrapString() where it wouldn't include the last
-   segment of a broken-up word if it was the last word in the entire String
+   segment of a wrapped word if it was the final word in the entire String
 
  1.8c (March 07, 2014)
 =======================
